# ProTalk

./: README.md
Backend/: Dockerfile  docker-compose.yml  pyproject.toml
Backend/app/: exceptions.py  main.py  settings.py
Backend/app/api/: dependencies.py  main.py
Backend/app/api/routers/: auth.py  interviews.py  questions.py  tests.py  users.py  vacancies.py
Backend/app/api/schemas/: __init__.py  auth.py  interview.py  knowledge.py  question.py  test.py  user.py  vacancy.py
Backend/app/core/: security.py
Backend/app/orm/: base.py
Backend/app/orm/models/: __init__.py  associations.py  interview.py  knowledge.py  question.py  test.py  user.py  vacancy.py
Backend/app/services/: auth.py  email.py  interview.py  question.py  test.py  user.py  vacancy.py
Backend/tests/: conftest.py
Frontend/: pubspec.yaml
Frontend/android/app/: build.gradle.kts
Frontend/ios/Runner/: Info.plist
Frontend/ios/Runner.xcodeproj/: project.pbxproj
Frontend/lib/: main.dart
Frontend/lib/config/: app_config.dart
Frontend/lib/data/: openapi.json  test_article.dart
Frontend/lib/frames/: HistoryScreen.dart  KnowledgeBase.dart  article_screen.dart  bottom_nav_wrapper.dart  interview_screen.dart  login_screen.dart  main_menu.dart  mode_selection_screen.dart  mode_test_screen.dart  onboarding_screen.dart  onboarding_screens.dart  profile_screen.dart  profile_update_screen.dart  question_screen.dart  register_screen.dart  (+5 more)
Frontend/linux/: CMakeLists.txt
Frontend/test/: widget_test.dart
Frontend/web/: index.html  manifest.json
Frontend/windows/: CMakeLists.txt
(+10 files in other folders)
